Updated Flow to Avoid JWTs in URL (smh lol)
